--- a/angular/src/app/planification-coach/planification-coach.component.html
+++ b/angular/src/app/planification-coach/planification-coach.component.html
@@ -27,6 +27,7 @@
                     <div class="img rounded-circle mb-2" [style.backgroundImage]="'url(' + coach.image + ')'"></div>
                     <a href="javascript:void(0)" 
                        (click)="reserveCoach(coach, 'LUNDI')" 
+                       [class.disabled]="!isLoggedIn"
                        data-toggle="tooltip" 
                        title="Cliquez pour réserver">
                       <strong>{{ coach.nom }}</strong><br>{{ coach.heures.join(', ') }}
